добавлен intent для определения местоположения

--- a/src/data/intent_patrol.yml
+++ b/src/data/intent_patrol.yml
@@ -3,21 +3,17 @@ version: "3.1"
 nlu:
 - intent: patrol
   examples: |
+    - [разведывай]{"entity": "action", "role": "patrol"}
+    - [сторожи]{"entity": "action", "role": "patrol"}
     - [разведывайте]{"entity": "action", "role": "patrol"}
-    - [охраняй]{"entity": "action", "role": "patrol"}
-    - [вынюхивай]{"entity": "action", "role": "patrol"}
-    - [шныряй]{"entity": "action", "role": "patrol"}
+    - [барражируйте]{"entity": "action", "role": "patrol"}
     - [защищайте]{"entity": "action", "role": "patrol"}
     - [патрулируй]{"entity": "action", "role": "patrol"}
-    - [обходите]{"entity": "action", "role": "patrol"}
-    - [сторожи]{"entity": "action", "role": "patrol"}
-    - [защищай]{"entity": "action", "role": "patrol"}
-    - [патрулируйте]{"entity": "action", "role": "patrol"}
-    - [разведывай]{"entity": "action", "role": "patrol"}
-    - [дежурь]{"entity": "action", "role": "patrol"}
-    - [барражируй]{"entity": "action", "role": "patrol"}
-    - [шныряйте]{"entity": "action", "role": "patrol"}
-    - [дежурьте]{"entity": "action", "role": "patrol"}
     - [обходи]{"entity": "action", "role": "patrol"}
     - [вынюхивайте]{"entity": "action", "role": "patrol"}
-    - [барражируйте]{"entity": "action", "role": "patrol"}
+    - [шныряй]{"entity": "action", "role": "patrol"}
+    - [сторожите]{"entity": "action", "role": "patrol"}
+    - [патрулируйте]{"entity": "action", "role": "patrol"}
+    - [вынюхивай]{"entity": "action", "role": "patrol"}
+    - [защищай]{"entity": "action", "role": "patrol"}
+    - [дежурьте]{"entity": "action", "role": "patrol"}
