--- a/src/data/rules.yml
+++ b/src/data/rules.yml
@@ -7,3 +7,9 @@ rules:
       - intent: nlu_fallback
       - action: utter_rephrase
       - action: action_reset_slots
+
+  - rule: местоположение
+    steps:
+      - intent: get_location
+      - action: action_set_location
+      - action: action_reset_slots
